argocd/apps/owntracks/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: owntracks
  name: owntracks
spec:
  ports:
    - name: "http"
      port: 8083
      targetPort: 80
  selector:
    app: owntracks
