argocd/apps/owntracks/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owntracks
spec:
  ingressClassName: istio
  rules:
    - host: owntracks.yanello.net
      http:
        paths:
          - backend:
              service:
                name: owntracks
                port:
                  number: 8083
            path: /
            pathType: Prefix
